# telegram-bot-stack

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSING_RESEARCH.md  Makefile  PACKAGE_CONVERSION_PLAN_EN.md  PACKAGE_CONVERSION_PLAN_RU.md  README.md  dev  make.bat  pyproject.toml  pyrightconfig.json  tmp_issue_body.md  tox.ini
.cursor/: mcp.json  mcp_config_example.json
.github/: GIT_FLOW_QUICK_START.md  GIT_WORKFLOW.md  HOW_TO_CREATE_ISSUES.md  PROJECT_STATUS.md  PR_AUTOMATION.md  README.md  cloud-agent-config.yml  pull_request_template.md  semantic_release.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/archive/: FIRST_ISSUE_DRAFT.md  QUICK_ISSUE_CREATE.sh  README.md  create_github_issue.py
.github/docs/: DEV_TOOLS.md  README.md  scripts.md
.github/docs/cloud-agent/: GUIDE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md
.github/docs/guides/: auto-merge.md  merge-pr.md
.github/docs/issue-management/: CREATE_INSTRUCTIONS.md
.github/docs/setup/: configure-workflow.md  getting-started.md  pypi-setup.md  token-setup.md
.github/docs/workflow/: branch-protection.md  git-flow-quick.md  git-flow.md  issue-linking.md  merge-pr.md  pr-automation.md  pr-naming.md
.github/hooks/: post-checkout
.github/workflows/: auto-merge.yml  ci.yml  cloud-agent.yml  docs.yml  e2e-tests.yml  integration-tests.yml  lint.yml  publish-github-packages.yml  pypi-publish.yml  release.yml  tests.yml  type-check.yml  unit-tests.yml
.github/workflows/scripts/: README.md  __init__.py  add_acceptance_criteria.py  agent_cache.py  agent_metrics_dashboard.py  analyze_context.py  analyze_pr.py  auto_label.py  check_automerge.py  check_ci.py  check_setup.py  common.py  create_issue.py  create_pr.py  execute_command.py  generate_subtasks.py  github_helper.py  link_issues.py  list_prs.py  log_agent_action.py  merge_pr.py  parse_command.py  pr_ready.py  pr_ready_mark.py  project_overview.py  read_issues.py  update_issue.py  wait_for_checks.py
.project-graph/: .file_hashes.json  README.md  __init__.py  bot-framework-graph.json  dependency-graph.json  examples-graph.json  examples.py  future-improvements.md  graph-router.json  graph_utils.py  infrastructure-graph.json  project-meta-graph.json
.project-graph/archive/: graph.json  router.json
.project-graph/bot-framework/: cli-graph.json  core-graph.json  router.json  storage-graph.json  utilities-graph.json
.project-graph/configuration/: graph.json  router.json
.project-graph/docs/: graph.json  router.json
.project-graph/examples/: graph.json  router.json
.project-graph/infrastructure/: graph.json  router.json
.project-graph/project-meta/: graph.json  router.json
.project-graph/testing/: graph.json  router.json
.project-graph/utils/: __init__.py  ai_metadata_generator.py  auto_update.py  edge_updater.py  full_regenerate.py  generate_graphs.py  graph_utils.py  maintenance.py  pre_commit_hook.py  regenerate_all.py  router_generator.py  router_maintenance.py  schema_standardizer.py  split_bot_framework.py  test_integration.py  unified_generator.py
archive/: PACKAGE_CONVERSION_PLAN_RU.md  README.md  business-analysis-ru.md  development-archive.md
archive/docker/: .dockerignore  Dockerfile  ENTRYPOINT.md  Makefile  README.md  docker-compose.yml  entrypoint.py
docs/: README.md  api_reference.md  architecture.md  cli-specification.md  deployment_guide.md  development-archive.md  installation.md  mcp-github-setup.md  mcp-project-graph-setup.md  migration_guide.md  multi-version-testing.md  private_installation.md  quickstart.md  storage_guide.md  windows-setup.md
examples/counter_bot/: README.md  bot.py
examples/echo_bot/: README.md  bot.py
examples/menu_bot/: README.md  bot.py
examples/poll_bot/: README.md  bot.py
examples/quit_smoking_bot/: README.md  bot.py  config.py  quotes_manager.py  status_manager.py  utils.py
examples/reminder_bot/: README.md  bot.py
scripts/: check_mcp_status.sh  mcp_github_server.py  mcp_project_graph.py  migrate_json_to_sql.py  setup_mcp.sh  tasks.py
src/: bot.py
src/core/: __init__.py  admin_manager.py  bot_base.py  storage.py  user_manager.py
src/quit_smoking/: __init__.py  bot.py  quotes_manager.py  status_manager.py
telegram_bot_stack/: __init__.py  admin_manager.py  bot_base.py  decorators.py  user_manager.py
telegram_bot_stack/cli/: __init__.py  main.py
telegram_bot_stack/cli/commands/: __init__.py  deploy.py  dev.py  doctor.py  init.py  new.py  validate.py
telegram_bot_stack/cli/utils/: __init__.py  backup.py  bot_lock.py  dependencies.py  deployment.py  deployment_state.py  git.py  health_checks.py  ide.py  linting.py  makefile.py  port_manager.py  secrets.py  testing.py  venv.py  version_tracking.py  vps.py
telegram_bot_stack/storage/: __init__.py  base.py  json.py  memory.py  sql.py
tests/: README.md  __init__.py  conftest.py
tests/agent/: test_agent_cache.py  test_agent_metrics.py
tests/cli/: test_backup.py  test_cli_main.py  test_deploy_command.py  test_deployment_utils.py  test_dev_command.py  test_init_command.py  test_new_command.py  test_secrets.py  test_utils.py  test_vps_utils.py
tests/cli/utils/: test_bot_lock.py  test_deployment_state.py
tests/core/: test_admin_manager.py  test_bot_base.py  test_decorators.py  test_storage.py  test_user_manager.py
tests/e2e/: README.md  conftest.py
tests/e2e/deployment/: conftest.py  test_backup_restore.py  test_full_deployment_flow.py  test_health_monitoring.py  test_rollback_version_tracking.py  test_secrets_management.py
tests/examples/: README.md  __init__.py  test_examples.py  test_menu_bot.py  test_poll_bot.py  test_quit_smoking_bot.py  test_reminder_bot.py
tests/integration/: QUICKSTART.md  README.md  STATUS.md  conftest.py  env.example  run_integration_tests.sh  test_deployment.py  test_full_flow.py  test_vps_requirements.py
tests/integration/bot/: __init__.py  test_user_flow.py
tests/integration/deployment/: __init__.py  (+5 more)
tests/unit/: README.md  __init__.py
(+55 files in other folders)
