[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-stack"
version = "1.34.5"
description = "Reusable framework for building Telegram bots with python-telegram-bot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
{name = "telegram-bot-stack contributors", email = "telegram-bot-stack@users.noreply.github.com"}
]
license = {file = "LICENSE"}
keywords = ["telegram", "bot", "framework", "python-telegram-bot", "chatbot"]
classifiers = [
"Development Status :: 4 - Beta",
"Intended Audience :: Developers",
"License :: Other/Proprietary License",
"Topic :: Communications :: Chat",
"Topic :: Software Development :: Libraries :: Application Frameworks",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
]

dependencies = [
"python-telegram-bot[job-queue]>=22.3,<23.0",
"python-dotenv>=1.1.0",
"click>=8.1.0",
"jinja2>=3.1.0",
"watchdog>=3.0.0",
"rich>=13.0.0",
"pyyaml>=6.0",
"paramiko>=3.0.0",
"fabric>=3.0.0",
"cryptography>=41.0.0",
]

[project.optional-dependencies]
# Database support (for SQL storage backends)
database = [
"sqlalchemy>=2.0,<3.0",
]
postgres = [
"psycopg2-binary>=2.9",
]

# Full installation with all features
all = [
"sqlalchemy>=2.0,<3.0",
"psycopg2-binary>=2.9",
]

# Development dependencies
dev = [
"ruff>=0.8.4,<0.9.0",                   # Keep in sync with pre-commit and CI
"mypy>=1.17.0",
"pytest>=8.0.0,<9.0",
"pytest-asyncio>=0.21.0,<0.25.0",       # 0.24+ may have Python 3.9 issues
"pytest-cov>=4.1.0",
"pytest-mock>=3.12.0",
"pytest-xdist>=3.5.0",                  # Parallel test execution
"pre-commit>=3.8.0",
"tox>=4.0.0",                           # Multi-version testing
"testcontainers>=3.7.0",                # For integration tests with mock VPS
    "PyGithub>=2.1.1",                      # Required for MCP GitHub server and CI automation
    "sqlalchemy>=2.0,<3.0",                 # Required for SQL storage tests
"psycopg2-binary>=2.9",                 # Required for PostgreSQL storage tests
]

# Release automation
release = [
"python-semantic-release>=8.7.0",
]

[project.scripts]
telegram-bot-stack = "telegram_bot_stack.cli.main:main"

[project.urls]
Homepage = "https://github.com/sensiloles/telegram-bot-stack"
Repository = "https://github.com/sensiloles/telegram-bot-stack"
Documentation = "https://github.com/sensiloles/telegram-bot-stack#readme"
"Issue Tracker" = "https://github.com/sensiloles/telegram-bot-stack/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram_bot_stack*"]
exclude = ["tests*", "scripts*", "examples*", "src*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
exclude = [
    "venv/",
    "build/",
    "dist/",
    "examples/",
    "tests/",
    "scripts/",
    "telegram_bot_stack/cli/templates/"
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    "venv/",
    "build/",
    "dist/",
    ".git/",
    "__pycache__/",
    "telegram_bot_stack/cli/templates/", # Template files (YAML, Dockerfiles, etc.) should not be formatted
]

[tool.ruff.lint]
select = [
"E",             # pycodestyle errors
"F",             # pyflakes
"W",             # pycodestyle warnings
"I",             # isort (import sorting)
"UP",            # pyupgrade (syntax modernization)
"B",             # flake8-bugbear (likely bugs)
]

ignore = [
# Type annotations - optional for Python framework
"ANN",
# Logging format - flexible formatting for user-facing messages
"G004",
# Exception handling - some exceptions need broad catching for stability
"BLE001", "TRY400", "TRY300", "B904",
# Unused arguments - required for Telegram API callbacks compatibility
"ARG002", "ARG001",
# Unused variables - temporary variables for debugging and development
"F841",
# Magic values - constants used in tests and examples
"PLR2004",
# Path operations - maintaining compatibility with older codebases
"PTH123",
# Datetime timezone - handled by telegram-bot library
"DTZ001",
# Complex rules - compatibility with dynamic telegram handlers
"RUF005", "RUF001", "SLF001",
# Formatter conflicts
"COM812", "ISC001",
# Import organization - required for conditional imports
"E402",
# Modern typing - maintaining Python 3.9 compatibility
"UP035", "UP006", "UP007",
# Long lines - formatter will handle
"E501"
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "BLE001"]  # Allow print statements and broad exceptions in scripts
"tests/*" = ["ANN", "PLR2004"]    # Relax type annotations and magic values in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
"--strict-markers",
"-ra",
]
# Coverage is now run explicitly via 'make coverage' or 'pytest --cov'
# This prevents coverage checks from failing when running subset of tests
# Live logging configuration for integration tests
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file = "tests/integration_tests.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
"asyncio: mark test as async",
"integration: mark test as integration test",
"unit: mark test as unit test",
"slow: mark test as slow (skipped in CI)",
"e2e: mark test as E2E test (requires Mock VPS, Docker-in-Docker)",
]
filterwarnings = [
"ignore::DeprecationWarning",
"ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["telegram_bot_stack"]
omit = [
"*/tests/*",
"*/venv/*",
"*/__pycache__/*",
"*/site-packages/*",
"*/examples/*",
"*/.github/*",
]
# Explicitly use pyproject.toml for coverage config, ignore tox.ini
data_file = ".coverage"

[tool.coverage.report]
exclude_lines = [
"pragma: no cover",
"def __repr__",
"raise AssertionError",
"raise NotImplementedError",
"if __name__ == .__main__.:",
"if TYPE_CHECKING:",
"@abstractmethod",
]
fail_under = 75
precision = 2

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["telegram_bot_stack/__init__.py:__version__"]
branch = "main"
build_command = "pip install build && python -m build"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "docs", "style", "refactor", "test", "chore", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
